update angular and related changes

--- a/src/app/student-list/student-list.component.html
+++ b/src/app/student-list/student-list.component.html
@@ -13,7 +13,7 @@
       <strong>Warning!</strong> Better check yourself, you're not looking too good.
     </ngb-alert>
   </p>
-<ngb-accordion #acc="ngbAccordion" activeIds="ngb-panel-0">
+<ngb-accordion activeIds="ngb-panel-0">
     <ngb-panel title="Simple">
       <ng-template ngbPanelContent>
         Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia
